<resources>
    <string name="app_name">Student diary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="googleSignInClient_serverClientId">291261739017-qs8uq8d4ggfoici9vi2ompklacfhvouj.apps.googleusercontent.com</string>
    <string name="channel_name">Principal</string>
    <string name="channel_description">Publicações principais do App</string>
    <string name="suggestion_notification_title">Obrigado por contribuir</string>
    <string name="suggestion_notification_description">Em breve analizaremos sua sugestão</string>
    <string name="greeting_notification_title">Olá e seja bem vindo ao Student diary!</string>
    <string name="greeting_notification_description">Parabéns por se juntar a nós! Estamos aqui para ajudá-lo(a) a se organizar e alcançar o sucesso acadêmico.</string>
    <string name="pomodoro_notification_title">Pomodoro</string>
    <string name="pomodoro_notification_description">Continue estudando:</string>
    <string name="pomodoro_interval_notification_description">Aproveite o intervalo:</string>
    <string name="pomodoro_extra_interval_notification_description">Intervalo prolongado:</string>
    <string name="pomodoro_notification_title_action_pause">Pausar</string>
    <string name="pomodoro_notification_title_action_continue">Retomar</string>
    <string name="pomodoro_notification_title_action_stop">Parar</string>
    <string name="low_battery_notification_pomodoro_title">Bateria baixa</string>
    <string name="low_battery_notification_pomodoro_description">Conecte o carregador para continuar utilizando o pomodoro</string>
    <string name="menuPopup_item_details_title">Detalhes</string>
    <string name="menuPopup_item_delete_title">Deletar</string>
    <string name="menuPopup_item_edit_title">Editar</string>
    <string name="header_drawer_subtitle">Desenvolvido por Leonardo Tissi</string>
    <string name="header_drawer_greeting">Bem-vindo (a), \n</string>
    <string name="header_drawer_user_email">%s</string>
    <string name="header_drawer_concatenated_text">%1$s%2$s</string>
    <string name="drawer_menu_item_disciplines">Disciplinas</string>
    <string name="drawer_menu_item_tools">Ferramentas</string>
    <string name="drawer_menu_item_dictionary">Dicionário</string>
    <string name="drawer_menu_item_public_tender">Concursos públicos</string>
    <string name="drawer_menu_item_pomodoro">Pomodoro</string>
    <string name="drawer_menu_item_more">Mais</string>
    <string name="drawer_menu_item_exit">Sair</string>
    <string name="drawer_menu_item_about">Sobre</string>
    <string name="drawer_menu_item_profile">Perfil</string>
    <string name="main_activity_alert_dialog_exit_title">Sair</string>
    <string name="main_activity_alert_dialog_exit_message">Deseja encerrar sessão e sair do aplicativo?</string>
    <string name="main_activity_setup_image_bottom_sheet_dialog_gallery_button">Galeria</string>
    <string name="main_activity_setup_image_bottom_sheet_dialog_remove_button">Remover</string>
    <string name="main_activity_app_info_bottom_sheet_dialog_description">Aplicativo para te auxiliar na organização dos estudos</string>
    <string name="main_activity_app_info_bottom_sheet_dialog_chip_gitHub">Perfil no GitHub</string>
    <string name="main_activity_app_info_bottom_sheet_dialog_chip_linkedin">Perfil no Linkedin</string>
    <string name="main_activity_app_info_bottom_sheet_dialog_chip_gitHub_project">Repositório do Projeto</string>
    <string name="main_activity_toast_message_notifications_permission_not_granted">O app não mostrará notificações</string>
    <string name="main_activity_toast_message_notifications_permission_granted">O app mostrará notificações</string>
    <string name="main_activity_toast_message_successful_update_user_photo">Foto alterada com sucesso</string>
    <string name="main_activity_toast_message_error_update_user_photo">Erro ao alterar foto</string>
    <string name="main_activity_toast_message_successful_remove_user_photo">Sucesso ao remover foto</string>
    <string name="main_activity_toast_message_error_remove_user_photo">Erro ao remover foto</string>
    <string name="main_activity_toast_message_successful_on_upload_token">Sucesso ao enviar token</string>
    <string name="main_activity_toast_message_error_on_upload_token">Erro ao enviar token</string>
    <string name="forgot_password_alert_dialog_textView_title">Recuperar senha</string>
    <string name="forgot_password_alert_dialog_text_field_email_hint">Email</string>
    <string name="forgot_password_alert_dialog_text_field_email_helper">Não se preocupe! Vamos enviar um e-mail para você com todas as informações necessárias para alterar sua senha. </string>
    <string name="forgot_password_alert_dialog_text_field_email_empty_error">Campo vazio</string>
    <string name="forgot_password_alert_dialog_text_field_email_not_format_email_error">Digite um email válido</string>
    <string name="update_password_dialog_textView_title">Alterar senha</string>
    <string name="update_password_dialog_text_field_password_hint">Nova senha</string>
    <string name="update_password_dialog_text_field_password_helper">Mínimo 6 díditos</string>
    <string name="update_password_dialog_text_field_password_empty_error">Campo vazio</string>
    <string name="update_password_dialog_text_field_password_not_valid_password_error">Senha muito curta</string>
    <string name="request_password_dialog_textView_title">Digite sua senha</string>
    <string name="request_password_dialog_text_field_password_hint">Sua senha</string>
    <string name="request_password_dialog_text_field_password_helper">Digite a senha para alterar os dados</string>
    <string name="request_password_dialog_text_field_password_empty_error">Campo vazio</string>
    <string name="request_password_dialog_text_field_password_not_valid_password_error">Senha muito curta</string>
    <string name="register_fragment_toolbar_title">Cadastrar</string>
    <string name="register_fragment_snackbar_message_firebase_auth_weak_password_exception">Sua senha precisa de, no mínimo, 6 dígitos</string>
    <string name="register_fragment_snackbar_message_firebase_auth_Invalid_credentials_Exception">Email inválido</string>
    <string name="register_fragment_snackbar_message_firebase_auth_user_collision_exception">Email já cadastrado</string>
    <string name="register_fragment_snackbar_message_firebase_auth_illegal_argument_exception">Existem campos vazios</string>
    <string name="register_fragment_snackbar_message_unknown_error">Erro desconhecido</string>
    <string name="register_fragment_snackbar_message_registration_done">Cadastro realizado</string>
    <string name="register_fragment_text_field_hint_email">Email</string>
    <string name="register_fragment_text_field_hint_password">Senha</string>
    <string name="register_fragment_text_field_hint_passwordChecker">Confirme a senha</string>
    <string name="register_fragment_registerButton">Cadastrar</string>
    <string name="register_fragment_text_field_error_email_required">Email necessário</string>
    <string name="register_fragment_text_field_error_password_required">Senha necessária</string>
    <string name="register_fragment_text_field_error_different_password">Senhas diferentes</string>
    <string name="register_fragment_text_field_email_not_format_email_error">Digite um email válido</string>
    <string name="login_fragment_toolbar_title">Login</string>
    <string name="login_fragment_text_field_hint_email">Email</string>
    <string name="login_fragment_text_field_hint_password">Senha</string>
    <string name="login_fragment_loginButton">Acessar</string>
    <string name="login_fragment_text_field_error_email_required">Email necessário</string>
    <string name="login_fragment_text_field_error_password_required">Senha necessária</string>
    <string name="login_fragment_snackbar_message_firebase_auth_Invalid_user_Exception">Usuário inválido</string>
    <string name="login_fragment_snackbar_message_firebase_auth_user_collision_Exception">Faça login usando um provedor associado a este endereço de e-mail</string>
    <string name="login_fragment_snackbar_message_firebase_auth_Invalid_credentials_Exception">Email ou senha incorretos</string>
    <string name="login_fragment_snackbar_message_firebase_auth_network_exception">Erro de conexão</string>
    <string name="login_fragment_snackbar_message_unknown_error">Erro desconhecido</string>
    <string name="login_fragment_snackbar_message_login_success">Sucesso ao entrar</string>
    <string name="login_fragment_snackbar_message_login_facebook_cancel">Cancelado pelo usuário</string>
    <string name="login_fragment_registerButton">Cadastrar</string>
    <string name="login_fragment_textView_label_not_have_an_account_question">Não possui uma conta?</string>
    <string name="login_fragment_textView_label_register">Registre-se</string>
    <string name="login_fragment_textView_forgot_password">Esqueceu a senha? Clique aqui para recuperá - la. </string>
    <string name="login_fragment_text_field_email_not_format_email_error">Digite um email válido</string>
    <string name="login_fragment_snackbar_message_firebase_auth_invalid_user_exception_on_forgot_password">Usuário não encontrado</string>
    <string name="login_fragment_snackbar_message_firebase_auth_invalid_credentials_exception_on_forgot_password">Email inválido</string>
    <string name="login_fragment_snackbar_message_firebase_auth_many_request_exception_on_forgot_password">bloqueio temporário devido a diversas tentativas</string>
    <string name="login_fragment_snackbar_message_firebase_auth_network_exception_on_forgot_password">Erro de conexão</string>
    <string name="login_fragment_snackbar_message_firebase_auth_on_sucess_forgot_password">Email enviado. Verifique sua caixa de entrada</string>
    <string name="facebook_app_id">172559435542270</string>
    <string name="fb_login_protocol_scheme">fb172559435542270</string>
    <string name="facebook_client_token">757d1efebbc1a4cc3932929b69d1cfd0</string>
    <string name="discipline_item_img_content_desc_favorite">Favorite flag</string>
    <string name="discipline_item_img_content_desc_completed">Completed flag</string>
    <string name="discipline_item_textView_empty_time">--:--</string>
    <string name="discipline_details_fragment_img_content_desc_favorite">Favorite flag</string>
    <string name="discipline_details_fragment_img_content_desc_completed">Completed flag</string>
    <string name="discipline_details_fragment_textView_empty_time">--:--</string>
    <string name="disciplines_fragment_toolbar_title">Disciplinas</string>
    <string name="disciplines_fragment_fab_insert_content_desc">Floating action insert discipline</string>
    <string name="dictionary_fragment_toolbar_title">Dicionário</string>
    <string name="discipline_details_fragment_toolbar_title">Detalhes</string>
    <string name="pomodoro_fragment_toolbar_title">Pomodoro</string>
    <string name="public_tender_fragment_toolbar_title">Concursos públicos</string>
    <string name="discipline_form_fragment_toolbar_title">Formulário</string>
    <string name="public_tender_suggestion_dialog_text_view_title">Envie sua recomendação de plataforma para concursos públicos</string>
    <string name="public_tender_suggestion_dialog_text_field_hint_name">Nome da Plataforma</string>
    <string name="public_tender_suggestion_dialog_text_field_hint_url">URL da plataforma</string>
    <string name="public_tender_suggestion_dialog_text_field_hint_description">Descrição da plataforma</string>
    <string name="user_profile_fragment_toolbar_title">Perfil</string>
    <string name="common_confirm">Confirmar</string>
    <string name="common_cancel">Cancelar</string>
    <string name="common_mandatory">Obrigatório</string>
    <string name="common_optional">Opcional</string>
</resources>