<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/disciplinesFragment">

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.studentdiary.ui.fragment.registerFragment.RegisterFragment"
        android:label="@string/register_fragment_toolbar_title"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.studentdiary.ui.fragment.loginFragment.LoginFragment"
        android:label="@string/login_fragment_toolbar_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_loginFragment_to_disciplinesFragment"
            app:destination="@id/disciplinesFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/disciplinesFragment"
        android:name="com.example.studentdiary.ui.fragment.disciplinesFragment.DisciplinesFragment"
        android:label="@string/disciplines_fragment_toolbar_title"
        tools:layout="@layout/fragment_disciplines">
        <action
            android:id="@+id/action_disciplinesFragment_to_disciplineFormFragment"
            app:destination="@id/disciplineFormFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_disciplinesFragment_to_disciplineDetailsFragment"
            app:destination="@id/disciplineDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/publicTenderFragment"
        android:name="com.example.studentdiary.ui.fragment.publicTenderFragment.PublicTenderFragment"
        android:label="@string/public_tender_fragment_toolbar_title"
        tools:layout="@layout/fragment_public_tender" />
    <fragment
        android:id="@+id/dictionaryFragment"
        android:name="com.example.studentdiary.ui.fragment.dictionaryFragment.DictionaryFragment"
        android:label="@string/dictionary_fragment_toolbar_title"
        tools:layout="@layout/fragment_dictionary" />
    <fragment
        android:id="@+id/disciplineFormFragment"
        android:name="com.example.studentdiary.ui.fragment.disciplineFormFragment.DisciplineFormFragment"
        android:label="@string/discipline_form_fragment_toolbar_title"
        tools:layout="@layout/fragment_discipline_form">
        <argument
            android:name="disciplineId"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/pomodoroFragment"
        android:name="com.example.studentdiary.ui.fragment.pomodoroFragment.PomodoroFragment"
        android:label="@string/pomodoro_fragment_toolbar_title"
        tools:layout="@layout/fragment_pomodoro" />
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/disciplinesFragment"
        app:popUpToInclusive="true" />
    <fragment
        android:id="@+id/disciplineDetailsFragment"
        android:name="com.example.studentdiary.ui.fragment.disciplineDetailsFragment.DisciplineDetailsFragment"
        android:label="@string/discipline_details_fragment_toolbar_title"
        tools:layout="@layout/fragment_discipline_details">
        <argument
            android:name="disciplineId"
            app:argType="string" />
        <action
            android:id="@+id/action_disciplineDetailsFragment_to_disciplineFormFragment"
            app:destination="@id/disciplineFormFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.studentdiary.ui.fragment.profileFragment.ProfileFragment"
        android:label="@string/user_profile_fragment_toolbar_title"
        tools:layout="@layout/fragment_profile" />
</navigation>