<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default">

        <TextView
            android:id="@+id/forgot_password_dialog_text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_alert_dialog_textView_title"
            android:gravity="center"
            android:textSize="@dimen/bigTextSize"
            android:layout_marginTop="@dimen/margin_default"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_password_dialog_text_field_email"
            style="@style/textField"
            android:hint="@string/forgot_password_alert_dialog_text_field_email_hint"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_dialog_text_view_title"
            app:startIconDrawable="@drawable/ic_email"
            app:helperTextEnabled="true"
            app:helperText="@string/forgot_password_alert_dialog_text_field_email_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/forgot_password_dialog_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_dialog_text_field_email">

            <Button
                android:id="@+id/forgot_password_dialog_button_negative"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/common_cancel" />

            <Button
                android:id="@+id/forgot_password_dialog_button_positive"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/common_confirm" />


        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>